# rb2_common

./: README.md
rb2_common/: CMakeLists.txt  package.xml
rb2_control/: CMakeLists.txt  package.xml
rb2_control/config/: rb2_control.yaml  rb2_diffdrive_control.yaml  twist_mux.yaml
rb2_control/config/simulation/: rb2_diffdrive_control.yaml
rb2_control/launch/: rb2_control.launch
rb2_description/: CMakeLists.txt  package.xml
rb2_description/launch/: rb2_rviz.launch  rb2_state.launch
rb2_description/meshes/bases/: rb2_base.stl
rb2_description/robots/: rb2_std.urdf.xacro
rb2_description/urdf/: common.gazebo.xacro  inertia.urdf.xacro
rb2_description/urdf/bases/: rb2.urdf.xacro
rb2_description/urdf/elevator/: elevator.gazebo.xacro  elevator.transmission.xacro  elevator.urdf.xacro
rb2_description/urdf/wheels/: omni_wheel.urdf.xacro  rubber_wheel.gazebo.xacro  rubber_wheel.transmission.xacro  rubber_wheel.urdf.xacro
rb2_localization/: CMakeLists.txt  package.xml
rb2_localization/launch/: amcl.launch  gmapping.launch  imu_filter.launch  map.yaml  map_server.launch  rb2_localization_basic.launch
rb2_localization/maps/fresenius/: fresenius.yaml
rb2_localization/maps/simple_building_floor/: simple_building_floor.yaml
rb2_localization/src/: robot_localization_utils.cpp
rb2_localization/test/: README.md  test_amcl_with_bag.launch
rb2_navigation/: CMakeLists.txt  package.xml
rb2_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  eband_local_planner_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map.yaml  global_costmap_params_obstacle.yaml  global_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
rb2_navigation/config/docking/: diff_docker.yaml  pp_docker.yaml
rb2_navigation/launch/: dockers.launch  move_base.launch  move_base_teb.launch  navigation_complete.launch  rb2_docking.launch  rgbd_to_laserscan.launch  scan_filter.launch  tf_publishers.launch
rb2_navigation/launch/docking/: rb2_cart_docking.launch  rb2_docking.launch
rb2_navigation/launch/gmapping/: move_base_gmapping.launch  rb2_gmapping.launch
rb2_navigation/launch/navigation_amcl/: amcl_rb2.launch  move_base.launch  move_base_amcl.launch
rb2_navigation/launch/navigation_local/: move_base_local.launch
rb2_navigation/scripts/: simulate_base.py
rb2_navigation/test/: README.md  test_move_base.launch
rb2_pad/: CMakeLists.txt  package.xml
rb2_pad/config/: ps3.yaml  ps4.yaml  xbox360.yaml
rb2_pad/launch/: logitechf710.yaml  ps3.yaml  ps4.yaml  rb2_pad.launch
rb2_pad/src/: rb2_pad.cpp
rb2_perception/: CMakeLists.txt  package.xml
rb2_perception/config/: ar_markers.yaml
rb2_perception/launch/: ar_locator.launch  perception_complete.launch  scan_to_cloud.launch  two_tags_locator.launch
rb2_robot_local_control/: CMakeLists.txt  package.xml
rb2_robot_local_control/config/: base_configuration.yaml  navigation.yaml  robot_status.yaml
rb2_robot_local_control/launch/: marker_mapping.launch  robot_local_control.launch
