<?xml version="1.0"?>
<package format="2">
  <name>rb2_navigation</name>
  <version>0.0.0</version>
  <description>The rb2_navigation package</description>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/rb2_navigation</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb2_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb2_common/issues</url>



  <buildtool_depend>catkin</buildtool_depend>

  <depend>move_base</depend>
  <depend>teb_local_planner</depend>
  
</package>
