<?xml version="1.0"?>
<package format="2">
  <name>rb2_robot_local_control</name>
  <version>0.1.0</version>
  <description>The rb2_robot_local package for configuration files</description>

  <maintainer email="jgomez@robotnik.es">Jose Gómez</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>marker_mapping</exec_depend>
  <exec_depend>rostful</exec_depend>
  <exec_depend>robot_local_control</exec_depend>

  <export>

  </export>
</package>
